fix(vehicle) : fix delete vehicle route  and add delete user route
